@@ -26,7 +26,6 @@ import java.util.Map;
 
 import static com.google.common.collect.Iterables.getOnlyElement;
 import static io.trino.plugin.hive.HiveConfig.HIVE_VIEWS_ENABLED;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class TestIcebergPlugin
@@ -189,7 +188,7 @@ public class TestIcebergPlugin
         ConnectorFactory connectorFactory = getConnectorFactory();
         File tempFile = File.createTempFile("test-iceberg-plugin-access-control", ".json");
         tempFile.deleteOnExit();
-        Files.write(tempFile.toPath(), "{}".getBytes(UTF_8));
+        Files.writeString(tempFile.toPath(), "{}");
 
         connectorFactory.create(
                 "test",
@@ -218,6 +217,37 @@ public class TestIcebergPlugin
                 .shutdown())
                 .isInstanceOf(ApplicationConfigurationException.class)
                 .hasMessageContaining("Configuration property 'hive.hive-views.enabled' was not used");
+    }
+
+    @Test
+    public void testRestCatalog()
+    {
+        ConnectorFactory factory = getConnectorFactory();
+
+        factory.create(
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "rest",
+                                "iceberg.rest-catalog.uri", "https://foo:1234"),
+                        new TestingConnectorContext())
+                .shutdown();
+    }
+
+    @Test
+    public void testJdbcCatalog()
+    {
+        ConnectorFactory factory = getConnectorFactory();
+
+        factory.create(
+                        "test",
+                        Map.of(
+                                "iceberg.catalog.type", "jdbc",
+                                "iceberg.jdbc-catalog.driver-class", "org.postgresql.Driver",
+                                "iceberg.jdbc-catalog.connection-url", "jdbc:postgresql://localhost:5432/test",
+                                "iceberg.jdbc-catalog.catalog-name", "test",
+                                "iceberg.jdbc-catalog.default-warehouse-dir", "s3://bucket"),
+                        new TestingConnectorContext())
+                .shutdown();
     }
 
     private static ConnectorFactory getConnectorFactory()
